# Waybro

./: CMakeLists.txt  LICENSE  README.md  const.sh  install.sh  pconfig  t0dolist.txt
include/: api-table.h  bar.h  comm.h  config.h  core.h  displayer.h  fetcher.h  layout.h  macro.h  module.h  pipler.h  poll.h  render.h  style.h  wayland-internal.h  wb-style-base.h  widget.h  wlr-layer-shell.h
include/module/: network.h
src/: bar.c  bluefetch.c  brightnessfetch.c  config.c  displayer.c  fetcher.c  handler.c  layout.c  loader.c  mainpoll.c  memfetch.c  module.c  mpdfetch.c  netfetch.c  poll.c  proc.c  readconfig.c  render.c  sd_bus_wrapper.c  style-basic.c  style.c  tempfetch.c  timefetch.c  volumefetch.c  waylandstuff.c  widget.c  workspacefetch.c
src/module/: CMakeLists.txt  network.c
src/module/bluetooth/: bluefetch.c
src/module/brightness/: CMakeLists.txt  brightnessfetch.c
src/module/clock/: CMakeLists.txt  timefetch.c
src/module/hyprworkspace/: CMakeLists.txt  workspacefetch.c
src/module/memory/: CMakeLists.txt  memfetch.c
src/module/mpd/: CMakeLists.txt  mpdfetch.c  mpdfetch.h
src/module/network/: CM  CMakeLists.txt  network.c  network.h
src/module/power/: CMakeLists.txt  fetcher.c
src/module/pulseaudio/: CMakeLists.txt  volumefetch.c
src/module/temp/: tempfetch.c
src/renderer/: clay_renderer_cairo.c
test/dirent/: a.out  dir.c
test/loadermcve/: CMakeLists.txt  main.c  module_interface.h
test/loadermcve/module/: CMakeLists.txt  power.c
test/nlscheme/: nl80211attr  nl80211bss  nlscheme.c
test/poll/: polltest  polltest.c  tesepoll.c  testepoll
test/util/: a.out  format.c
test/widget/: bar  bar.c  clay_test
util/nlscheme/: ieee80211ie
